comentado y Logger realizado
