# src/main/java/es/nhs/alquilerhardware/models/ReservaAulaId.java
@@ -1,6 +1,8 @@
 package es.nhs.alquilerhardware.models;
 
 import jakarta.persistence.Embeddable;
+import lombok.Getter;
+import lombok.Setter;
 
 import java.io.Serial;
 import java.io.Serializable;
@@ -8,49 +10,47 @@ import java.util.Date;
 
 /**
  * @author Neil Hdez
- * @version 1.0.0
- * @since 11/01/2023
+ * this class is the primary key of the table reserva_aula
  */
 
 @Embeddable
+@Getter
+@Setter
 public class ReservaAulaId implements Serializable
 {
 
+    /**
+     * serial version
+     */
     @Serial
     private static final long serialVersionUID = 5633180930259958017L;
 
-    private Long idAula;
+    /**
+     * Attribute - classroom identifier
+     */
+    private Long              idAula;
 
-    private Date fecha;
+    /**
+     * Attribute - date
+     */
+    private Date              fecha;
 
+    /**
+     * Constructor empty
+     */
     public ReservaAulaId()
     {
 
     }
 
+    /**
+     * Constructor with parameters
+     * @param idAula classroom identifier
+     * @param fecha date
+     */
     public ReservaAulaId(Long idAula, Date fecha)
     {
         this.idAula = idAula;
-        this.fecha = fecha;
-    }
-
-    public Long getIdAula()
-    {
-        return idAula;
-    }
-
-    public void setIdAula(Long idAula)
-    {
-        this.idAula = idAula;
-    }
-
-    public Date getFecha()
-    {
-        return this.fecha;
-    }
-
-    public void setFecha(Date fecha)
-    {
         this.fecha = fecha;
     }
 }
