# src/main/java/es/nhs/alquilerhardware/models/ReservaCarritoPcs.java
@@ -1,83 +1,68 @@
 package es.nhs.alquilerhardware.models;
 
 import jakarta.persistence.*;
+import lombok.Getter;
+import lombok.Setter;
 
 /**
  * @author Neil Hdez
- * @version 1.0.0
- * @since 11/01/2023
+ * this class is a model of the table reserva_carrito_pcs
  */
 
 @Entity
 @Table(name = "reserva_carrito_pcs")
+@Getter
+@Setter
 public class ReservaCarritoPcs
 {
 
+    /**
+     * Attribute - reservation identifier
+     */
     @EmbeddedId
     private ReservaCarritoPcsId reservaCarritoPcsId;
 
+    /**
+     * Attribute - professor identifier
+     */
     @ManyToOne
     @JoinColumn(name = "id_profesor")
-    private Profesor idProfesor;
+    private Profesor            idProfesor;
 
+    /**
+     * Attribute - classroom identifier
+     */
     @ManyToOne
     @JoinColumn(name = "id_carrito_pcs")
     @MapsId("idCarritoPcs")
-    private CarritoPcs idCarritoPcs;
+    private CarritoPcs          idCarritoPcs;
 
+    /**
+     * Attribute - location of the loan
+     */
     @Column
-    private String ubicacionPrestamo;
+    private String              ubicacionPrestamo;
 
+    /**
+     * Constructor empty
+     */
     public ReservaCarritoPcs()
     {
 
     }
 
+    /**
+     * Constructor with parameters
+     * @param reservaCarritoPcsId reservation identifier
+     * @param idProfesor professor identifier
+     * @param idCarritoPcs classroom identifier
+     * @param ubicacionPrestamo location of the loan
+     */
     public ReservaCarritoPcs(ReservaCarritoPcsId reservaCarritoPcsId, Profesor idProfesor, CarritoPcs idCarritoPcs, String ubicacionPrestamo)
     {
         this.reservaCarritoPcsId = reservaCarritoPcsId;
         this.idProfesor = idProfesor;
         this.idCarritoPcs = idCarritoPcs;
-        this.ubicacionPrestamo = ubicacionPrestamo;
-    }
-
-    public ReservaCarritoPcsId getReservaCarritoPcsId()
-    {
-        return reservaCarritoPcsId;
-    }
-
-    public void setReservaCarritoPcsId(ReservaCarritoPcsId reservaCarritoPcsId)
-    {
-        this.reservaCarritoPcsId = reservaCarritoPcsId;
-    }
-
-    public Profesor getIdProfesor()
-    {
-        return idProfesor;
-    }
-
-    public void setIdProfesor(Profesor idProfesor)
-    {
-        this.idProfesor = idProfesor;
-    }
-
-    public CarritoPcs getIdCarritoPcs()
-    {
-        return idCarritoPcs;
-    }
-
-    public void setIdCarritoPcs(CarritoPcs idCarritoPcs)
-    {
-        this.idCarritoPcs = idCarritoPcs;
-    }
-
-	public String getUbicacionPrestamo()
-    {
-        return ubicacionPrestamo;
-    }
-
-    public void setUbicacionPrestamo(String ubicacionPrestamo)
-    {
         this.ubicacionPrestamo = ubicacionPrestamo;
     }
 }
