# src/main/java/es/nhs/alquilerhardware/models/ReservaCarritoPcsId.java
@@ -1,54 +1,57 @@
 package es.nhs.alquilerhardware.models;
 
 import jakarta.persistence.Embeddable;
+import lombok.Getter;
+import lombok.Setter;
 
+import java.io.Serial;
 import java.io.Serializable;
 import java.util.Date;
 
 /**
  * @author Neil Hdez
- * @version 1.0.0
- * @since 11/01/2023
+ * this class is the primary key of the table reserva_carrito_pcs
  */
 
 @Embeddable
+@Getter
+@Setter
 public class ReservaCarritoPcsId implements Serializable
 {
 
+    /**
+     * serial version
+     */
+    @Serial
     private static final long serialVersionUID = -2414994027646356688L;
 
+    /**
+     * Attribute - carrito pcs identifier
+     */
     private Long idCarritoPcs;
 
+    /**
+     * Attribute - date of the reservation
+     */
     private Date fecha;
 
+    /**
+     * Constructor empty
+     */
     public ReservaCarritoPcsId()
     {
 
     }
 
+    /**
+     * Constructor with parameters
+     * @param idCarritoPcs carrito pcs identifier
+     * @param fecha date of the reservation
+     */
     public ReservaCarritoPcsId(Long idCarritoPcs, Date fecha)
     {
         this.idCarritoPcs = idCarritoPcs;
         this.fecha = fecha;
     }
 
-    public Long getIdCarritoPcs()
-    {
-        return idCarritoPcs;
-    }
-
-    public void setIdCarritoPcs(Long idCarritoPcs)
-    {
-        this.idCarritoPcs = idCarritoPcs;
-    }
-
-    public Date getFecha()
-    {
-        return this.fecha;
-    }
-
-    public void setFecha(Date fecha)
-    {
-        this.fecha = fecha;
-    }
 }
