# src/main/java/es/nhs/alquilerhardware/models/ReservaCarritoTabletsId.java
@@ -1,55 +1,54 @@
 package es.nhs.alquilerhardware.models;
 
 import jakarta.persistence.Embeddable;
+import lombok.Getter;
+import lombok.Setter;
 
 import java.io.Serializable;
 import java.util.Date;
 
 /**
  * @author Neil Hdez
- * @version 1.0.0
- * @since 11/01/2023
+ * this class is the primary key of the table reserva_carrito_tablets
  */
 
 @Embeddable
+@Getter
+@Setter
 public class ReservaCarritoTabletsId implements Serializable
 {
 
+    /**
+     * serial version
+     */
     private static final long serialVersionUID = -2414994027646356688L;
 
+    /**
+     * Attribute - cart tablets identifier
+     */
+    private Long              idCarritoTablets;
 
-    private Long idCarritoTablets;
+    /**
+     * Attribute - date of the reservation
+     */
+    private Date              fecha;
 
-    private Date fecha;
-
+    /**
+     * Constructor empty
+     */
     public ReservaCarritoTabletsId()
     {
 
     }
 
+    /**
+     * Constructor with parameters
+     * @param idCarritoTablets cart tablets identifier
+     * @param fecha date of the reservation
+     */
     public ReservaCarritoTabletsId(Long idCarritoTablets, Date fecha)
     {
         this.idCarritoTablets = idCarritoTablets;
-        this.fecha = fecha;
-    }
-
-    public Long getIdCarritoTablets()
-    {
-        return idCarritoTablets;
-    }
-
-    public void setIdCarritoTablets(Long idCarritoTablets)
-    {
-        this.idCarritoTablets = idCarritoTablets;
-    }
-
-    public Date getFecha()
-    {
-        return this.fecha;
-    }
-
-    public void setFecha(Date fecha)
-    {
         this.fecha = fecha;
     }
 }
